--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+---
+layout: home
+title: Welcome to My Portfolio
+---
+
 <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="projects.html">Projects</a>
   <a href="contact.html">Contact</a>
 </nav>
+
+<h1>Hello, I'm Isaac Tunney!</h1>
+<p>Welcome to my portfolio website! Check out my projects and get in touch.</p>
