--- a/about.html
+++ b/about.html
@@ -1,1 +1,14 @@
-This is me!.
+---
+layout: page
+title: About Me
+---
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h1>About Me</h1>
+<p>This is where you can write about yourself!</p>
